[package]
name = "pogoda-terminal"
description = "Moja pogodynka"
keywords = ["weather"]
version = "0.1.0"
authors = ["er2de2 <canalonline@protonmail.com>"]
license = "MIT"
repository = "https://github.com/er2de2/pogoda-terminal"
edition = "2021"
exclude = ["tests/**/*", "*_tests.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
reqwest = "0.11.18"
regex = "1.8.4"
serde_json = "1.0.97"
anyhow = "1.0.71"
serde = { version = "1.0.188", features = ["derive"] }
chrono = "0.4.31"
num = "0.4.1"

